# CognitiveWorkflow

./: .gitignore  .pre-commit-config.yaml  00_Concept.md  AGENTS.md  AI_Agent_Workflow_技术架构设计说明书_v1.0.docx  CLAUDE.md  Makefile  README.md  dev.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  visual-smoke.html  vite.config.ts
apps/runtime/: README.md  pyproject.toml
apps/runtime/src/cw_runtime/: __init__.py  cli.py  py.typed  reflection_memory.py  settings.py
apps/runtime/src/cw_runtime/adapters/: __init__.py  base.py  builtin_tools.py  claude_code_adapter.py  pydantic_ai_adapter.py
apps/runtime/src/cw_runtime/api/: __init__.py  app.py  auth.py  contracts.py
apps/runtime/src/cw_runtime/builders/: __init__.py  static_packs.py
apps/runtime/src/cw_runtime/engine/: __init__.py  compiler.py  langgraph_executor.py  langgraph_runtime_bridge.py
apps/runtime/src/cw_runtime/harness/: __init__.py  project.py  secrets.py
apps/runtime/src/cw_runtime/model_router/: __init__.py  router.py
apps/runtime/src/cw_runtime/persistence/: __init__.py  runtime_store.py
apps/runtime/src/cw_runtime/runner/: __init__.py  node_runner.py
apps/runtime/src/cw_runtime/runs/: __init__.py  lifecycle.py
apps/runtime/tests/: conftest.py  test_cw_runtime_smoke.py  test_m1_3_10_langgraph_executor.py  test_m1_3_11_reflection_memory.py  test_m1_3_12_claude_code_adapter.py  test_m1_3_14_runtime_recovery.py  test_m1_3_15_langgraph_hitl_bridge.py  test_m1_3_1_api_contracts.py  test_m1_3_1_system_endpoints.py  test_m1_3_2_project_endpoints.py  test_m1_3_2_project_harness.py  test_m1_3_3_workflow_compiler.py  test_m1_3_4_run_endpoints.py  test_m1_3_4_run_lifecycle.py  test_m1_3_5_node_runner.py  test_m1_3_6_static_builders.py  test_m1_3_7_persistence_observability.py  test_m1_3_8_human_decision_resolve.py  test_m1_3_9_model_router.py  test_m1_4_1_pydantic_ai_adapter.py  test_m1_4_20_builtin_tools.py  test_m1_4_31_adapter_runner_bridge.py  test_m1_4_53_node_action_api.py  test_m1_4_54_repair_action_api.py  test_smoke.py  test_w1_5_195_runtime_instruction_api.py
docs/: roadmap.md  spec_code_mapping.md
docs/03_decisions/: 0001-record-architecture-decisions.md  0002-engine-not-import-pydantic-ai.md  0003-schema-single-source-of-truth.md  0004-langgraph-as-graph-engine.md  0005-pydantic-ai-as-base-agent.md  0006-electron-desktop-shell.md  0007-persistence-three-layer.md  0008-stream-event-protocol.md  0009-hitl-via-approval-required-toolset.md  0010-durable-execution-dbos.md  0011-runtime-flow-desktop-actions-contract.md  0012-fr015-snapshot-ledger-restore-contract.md  README.md  _template.md
docs/04_runbook/: m1.1-progress.md  m1.2-progress.md  m1.3-progress.md  m1.4-progress.md  m1.5-a4-a8-packaged-follow-up-decision-record.json  m1.5-a4-a8-remaining-blocker-package-routing.json  m1.5-a4-a8-routed-blocker-package-decision-record.json  m1.5-a4-a8-routed-package-follow-up-handoff.json  m1.5-a4-a8-routed-package-handoff-decision-record.json  m1.5-a4-a8-routed-package-handoff-follow-up-decision-record.json  m1.5-a4-a8-routed-package-handoff-follow-up-handoff.json  m1.5-a4-a8-routed-package-handoff-follow-up-needs-followup-handoff.json  m1.5-a4-a8-routed-package-handoff-follow-up-needs-followup-plan.json  m1.5-a4-a8-routed-package-handoff-needs-followup-plan.json  m1.5-a4-a8-routed-package-needs-followup-plan.json  m1.5-a4-blocker-follow-up-plan.json  m1.5-a4-blocker-repair-decision-record.json  m1.5-a4-capture-execution.json  m1.5-a4-capture-matrix.json  m1.5-a4-evidence-manifest.json  m1.5-a4-needs-followup-repair-plan.json  m1.5-a4-post-capture-blocker-repair-plan.json  m1.5-a4-post-capture-decision-record.json  m1.5-a4-runtime-bridge-user-path-capture.json  m1.5-a4-runtime-flow-decision-handoff.json  m1.5-a4-runtime-flow-decision-record.json  m1.5-a4-runtime-flow-review-package.json  m1.5-a4-runtime-ux-acceptance-blocker-repair.json  m1.5-a4-runtime-ux-acceptance-follow-up-package.json  m1.5-a4-stream-acceptance-blocker-repair.json  m1.5-a4-stream-acceptance-follow-up-package.json  m1.5-a4-stream-phase-capture-execution.json  m1.5-a8-git-history-conformance-blocker-repair.json  m1.5-a8-git-history-conformance-follow-up-package.json  m1.5-a8-git-history-prerequisite-evidence.json  m1.5-dependency-gate-proposal.json  m1.5-desktop-runtime-bridge-plan.json  m1.5-fr-evidence-map.json  m1.5-fr015-snapshot-restore-contract-gate.json  m1.5-local-ui-evidence-bundle.json  (+8 more)
docs/reviews/: m1.2-schema-closure-review.md  m1.3.1-runtime-api-foundation-review.md  m1.3.10-langgraph-stategraph-executor-review.md  m1.3.11-reflection-memory-review.md  m1.3.12-agent-adapter-review.md  m1.3.13-hitl-resumption-review.md  m1.3.14-sidecar-restart-recovery-review.md  m1.3.15-langgraph-hitl-bridge-review.md  m1.3.2-runtime-harness-project-init-review.md  m1.3.3-workflow-compiler-boundary-review.md  m1.3.4-run-lifecycle-stream-bus-review.md  m1.3.5-node-runner-foundation-review.md  m1.3.6-static-context-evidence-builders-review.md  m1.3.7-persistence-observability-foundation-review.md  m1.3.8-hitl-decision-resolve-review.md  m1.3.9-model-router-phase1-review.md  m1.4.1-pydantic-ai-adapter-review.md  m1.4.10-pydantic-ai-toolset-registry-review.md  m1.4.11-pydantic-ai-model-retry-review.md  m1.4.12-pydantic-ai-reported-cost-guard-review.md  m1.4.13-pydantic-ai-builtin-function-registry-review.md  m1.4.14-pydantic-ai-evidence-lookup-tool-review.md  m1.4.15-pydantic-ai-sdk-stream-cancel-review.md  m1.4.16-claude-code-sdk-session-review.md  m1.4.17-claude-code-allowed-tools-review.md  m1.4.18-claude-code-mcp-server-config-review.md  m1.4.19-claude-code-permission-lockdown-review.md  m1.4.2-pydantic-ai-sdk-session-review.md  m1.4.20-pydantic-ai-web-fetch-builtin-review.md  m1.4.3-pydantic-ai-stream-events-review.md  m1.4.4-pydantic-ai-usage-limits-review.md  m1.4.41-claude-code-can-use-tool-bridge-review.md  (+254 more)
specs/: failure_taxonomy.md  runtime_harness.md
(+190 files in other folders)
