[project]
name = "cognitiveworkflow"
version = "0.1.0"
description = "CognitiveWorkflow — Workspace root (managed by uv)"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "CW Architecture" }]

# 这是 uv workspace 的根；不打包，不发布。
# 各子包（cw_schemas / cw_runtime / cw_ui）的 distribution 名与依赖在
# 各自的 packages/<name>/pyproject.toml 中声明。

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/schemas",
    "apps/runtime",
]

# uv 要求 workspace 成员之间的依赖必须在此显式声明
[tool.uv.sources]
cw_schemas = { workspace = true }
cw_runtime = { workspace = true }

# ============================================================
# Dev / lint / type / test 共享配置（由各子包通过 inherit 复用）
# ============================================================

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "pydantic-ai",
    ".agent-workflow",
    "**/.venv",
    "**/dist",
    "**/build",
    "**/__pycache__",
]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I",      # pycodestyle / pyflakes / isort
    "B",                      # flake8-bugbear
    "UP",                     # pyupgrade
    "ASYNC",
    "RUF",
]
ignore = [
    "E501",                   # line length 由 formatter 控制

    # 全角中文标点：CW 是中文为主的项目，docstring / 注释 / 字符串内含中文标点是常态
    # 仅在"看起来像但其实不是"的情况下 ruff 会报误警，对 CW 而言收益小于干扰
    "RUF001",                 # ambiguous unicode in string
    "RUF002",                 # ambiguous unicode in docstring
    "RUF003",                 # ambiguous unicode in comment
]

[tool.ruff.lint.isort]
known-first-party = ["cw_schemas", "cw_runtime", "cw_ui"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
exclude = "(pydantic-ai/|\\.agent-workflow/|dist/|build/)"
plugins = ["pydantic.mypy"]
mypy_path = ["packages/schemas/src", "apps/runtime/src"]
explicit_package_bases = true
namespace_packages = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages/schemas/tests", "apps/runtime/tests"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov-report=term-missing",
    "--import-mode=importlib",   # 避免同名 test 文件在不同目录冲突
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
branch = true
source = ["cw_schemas", "cw_runtime"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-snapshot>=0.9.0",
    "datamodel-code-generator>=0.28.0",
    "pre-commit>=4.0.0",
]
