[project]
name = "cw_runtime"
version = "0.1.0"
description = "CognitiveWorkflow Python runtime (FastAPI sidecar + LangGraph engine + AgentAdapters)"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "CW Architecture" }]
readme = "README.md"

dependencies = [
    # 共享 schema（workspace local）
    "cw_schemas",

    # 核心运行时
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",

    # 图调度内核（ADR-0004）
    "langgraph>=0.2.0",

    # Pydantic AI（ADR-0005）— 仅在 adapters 子包内 import
    "pydantic-ai-slim[anthropic,openai,google,mcp,fastmcp,retries,evals,ag-ui,web]>=0.1.0",

    # 持久化（ADR-0007）
    "sqlite-utils>=3.37.0",
    "pygit2>=1.16.0",

    # 向量库
    "pylance>=0.20.0",  # LanceDB Python client

    # 观测
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",

    # ID
    "ulid-py>=1.1.0",

    # 哈希
    "blake3>=1.0.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]

[project.entry-points."cw.adapters"]
pydantic_ai = "cw_runtime.adapters.pydantic_ai_adapter:PydanticAIAdapter"
litellm = "cw_runtime.adapters.litellm_adapter:LiteLLMAdapter"

[project.scripts]
cw-runtime = "cw_runtime.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cw_runtime"]

[tool.hatch.build.targets.sdist]
include = ["src/cw_runtime", "tests", "README.md"]
