[project]
name = "cw_runtime"
version = "0.1.0"
description = "CognitiveWorkflow Python runtime (FastAPI sidecar + LangGraph engine + AgentAdapters)"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "CW Architecture" }]
readme = "README.md"

# M1.1 阶段：仅声明最小依赖，让骨架可以跑通 uv sync + smoke test。
# M1.3 milestone 内逐步加回 fastapi / langgraph / pydantic-ai-slim / lancedb / opentelemetry / pygit2 等运行时依赖。
dependencies = [
    # 共享 schema（workspace local）
    "cw_schemas",

    # 基础工具
    "pydantic>=2.10.0",
]

# === M1.3 milestone 启用 ===
# - "fastapi>=0.115.0"
# - "uvicorn[standard]>=0.32.0"
# - "httpx>=0.27.0"
# - "langgraph>=0.2.0"
# - "pydantic-ai-slim[anthropic,openai,google,mcp,fastmcp,retries,evals,ag-ui,web]>=0.1.0"
# - "sqlite-utils>=3.37.0"
# - "pygit2>=1.16.0"
# - "lancedb>=0.16.0"
# - "opentelemetry-api>=1.28.0"
# - "opentelemetry-sdk>=1.28.0"
# - "python-ulid>=3.0.0"
# - "blake3>=1.0.0"

[project.optional-dependencies]
runtime = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "sqlite-utils>=3.37.0",
    "python-ulid>=3.0.0",
    "blake3>=1.0.0",
]
agents = [
    "pydantic-ai-slim[anthropic,openai,google,mcp,fastmcp,retries,evals,ag-ui,web]>=0.1.0",
]
graph = [
    "langgraph>=0.2.0",
]
persistence = [
    "pygit2>=1.16.0",
    "lancedb>=0.16.0",
]
observability = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
]
ollama = [
    "ollama>=0.4.0",
]

[project.entry-points."cw.adapters"]
pydantic_ai = "cw_runtime.adapters.pydantic_ai_adapter:PydanticAIAdapter"
litellm = "cw_runtime.adapters.litellm_adapter:LiteLLMAdapter"

[project.scripts]
cw-runtime = "cw_runtime.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cw_runtime"]

[tool.hatch.build.targets.sdist]
include = ["src/cw_runtime", "tests", "README.md"]

# === uv workspace sources（必填）===
# uv 要求所有 workspace 内的依赖在 [tool.uv.sources] 显式声明。
[tool.uv.sources]
cw_schemas = { workspace = true }
